# stories_reproducibility

./: .gitignore  README.md  evaluate.py  main.py  plot.py  preprocess.py  pyproject.toml  requirements.txt  setup.py  test_step.py
.github/workflows/: test.yml
configs/: axolotl.yaml  celegans.yaml  evaluate.yaml  plot.yaml  preprocess.yaml  train.yaml  zebrafish.yaml
configs/main/: config.yaml
configs/organism/: artista.yaml  midbrain.yaml
configs/test_step/: config.yaml
notebooks/: blender_render.py  fig4.ipynb  preprocess_artista.ipynb  preprocess_artista_traj.ipynb  preprocess_midbrain.ipynb  preprocess_zesta.ipynb  vis_runs.ipynb
scripts/: evaluate.py  evaluate.sh  evaluate_multi.py  evaluation_scores.py  evaluation_utils.py  plot.py  preprocess.py  preprocess.sh  train.py  train.sh
scripts/configs/: evaluate.yaml  preprocess.yaml  train.yaml
space_time/: __init__.py  data.py  explicit_steps.py  gradient_flow.py  implicit_steps.py  model.py  potentials.py  simulate.py
space_time/explicit_steps/: __init__.py  linear.py  quadratic.py
space_time/implicit_steps/: __init__.py  linear.py  monge_linear.py  monge_quadratic.py  quadratic.py
space_time/tools/: initializers.py
spacetime/: data.py  loss.py  potentials.py  scores.py  spacetime.py  tools.py
spacetime/steps/: __init__.py  explicit.py  icnn_implicit.py  icnn_linear_implicit.py  linear_explicit.py  monge_implicit.py  monge_linear_implicit.py  monge_quadratic_implicit.py  proximal_step.py  quadratic_explicit.py
tests/: line_plot.ipynb  midbrain.ipynb  styblinski.ipynb  test_gradient_flow.py  test_potentials.py  test_simulate.py  zebrafish.ipynb
(+216 files in other folders)
