[tool.poetry]
name = "space-time"
version = "0.1.0"
description = ""
authors = ["Geert-Jan Huizing <geert-jan.huizing@ens.fr>"]
readme = "README.md"
packages = [{include = "space_time"}]

[tool.poetry.dependencies]
python = "^3.8"
ott-jax = "^0.4.0"
wandb = "^0.14.0"
omegaconf = "^2.3.0"
flatten-dict = "^0.4.2"
tqdm = "^4.65.0"
hydra-core = "^1.3.2"
hydra-submitit-launcher = "^1.2.0"
anndata = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
