[tool.poetry]
name = "spacetime"
version = "0.1.0"
description = ""
authors = ["Geert-Jan Huizing <geert-jan.huizing@ens.fr>"]
readme = "README.md"
packages = [{include = "spacetime"}]

[tool.poetry.dependencies]
python = "^3.8"
ott-jax = "^0.4.0"
tqdm = "^4.65.0"
anndata = "^0.8.0"
numba = "^0.56.4"
scikit-learn = "^1.3.0"
harmonypy = "^0.0.9"

[tool.poetry.group.test.dependencies]
hydra-submitit-launcher = "^1.2.0"
hydra-core = "^1.3.2"
protobuf = ">=3.20.0,<3.21.0"
omegaconf = "^2.3.0"
scanpy = "^1.9.0"
wandb = "^0.14.0"
flatten-dict = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
