[tool.poetry]
name = "spacetime"
version = "0.1.0"
description = "Learn spatially informed Waddington-like potentials for single-cell gene expression"
authors = ["Geert-Jan Huizing <gjhuizing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
